2024-12-05 [3.22]
* oprava preklepu pri mazaní histórie

2024-12-01 [3.21]
* pridané rozšírené triedenie a filtrovanie dostupné cez kontextové menu
    - umožňuje filtrovať a triediť výsledky podľa rôznych kategórii
* pridaná možnosť automatického mazania webshare histórie do nastavení doplnku
* oprava pádu ak položka obsahuje nekompletné video informácie

2024-09-15 [3.20]
* oprava pádu pre python2 image

2024-09-13 [3.19]
* oprava pádu ak nie je možné získať heslo pre video stream
* pokus o vyfiltrovanie/ignorovanie nezmyslov z SCC databázy

2024-08-21 [3.18]
* prehrávanie trailerov z youtube cez priame volanie yt doplnku

2024-08-06 [3.17]
* oprava pádu ak nie sú vrátené informácie o video streame

2024-08-05 [3.16]
* oprava pádu pri chybe v trakt.tv
* oprava generovaného playlistu pre trailery

2024-07-31 [3.15]
* oprava pádu pri nesprávne nastavenej informácie o sezóne u epizód
* vylepšené reportovanie chýb z webshare serverov

2024-03-05 [3.14]
* nahradenie interného klienta prehraj.to za priame volanie nového prehraj.to doplnku

2024-01-27 [3.13]
* priadnie podpory pre virtuálne profily v ArchivCZSK >= 2.5.0

2024-01-08 [3.12]
* úpravy kvôli zmene spôsobu fungovania rodičovskej kontroly
* automatické nastavovanie timeoutu a možnosť zapnúť/vypnúť verifikáciu SSL certifikátov

2024-01-03 [3.11]
* vypnutie otvorenia SSL certifikátov

2023-12-31 [3.10]
* zmena predvoleného protokolu pre komunikáciu s API na https

2023-12-30 [3.9]
* aplikovanie zmeny timeoutu protokolu pre komunikáciu s API bez reštartu

2023-12-01 [3.8]
* pridanie žánrov do popisu filmu

2023-10-27 [3.7]
* oprava vyhľadania na prehraj.to

2023-07-07 [3.6]
* pridanie podpory pre súbory chránené heslom

2023-05-04 [3.5]
* vylepšenie filtrovania obsahu pre dospelých

2023-04-17 [3.4]
* nastavovanie lepšieho názvu súboru pri sťahovaní epizód u seriálov
* oprava označovania pozretých sezón/epizód u seriálov

2023-04-12 [3.3]
* nastavovanie správneho user agenta do požiadaviek

2023-04-12 [3.2]